[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/Dialog/Graphics/minus_button_normal.png" type="Texture" id=1]
[ext_resource path="res://addons/Dialog/Graphics/minus_button_over.png" type="Texture" id=2]
[ext_resource path="res://addons/Dialog/ChoiceBox.gd" type="Script" id=3]
[ext_resource path="res://addons/Dialog/Fonts/NotoSansCJKtc-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="ChoiceBox" type="PanelContainer"]
margin_right = 256.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 46 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 250.0
margin_bottom = 41.0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
margin_right = 208.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/selection_color = Color( 0.0117647, 0.247059, 0.658824, 0.937255 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
expand_to_text_length = true
placeholder_text = "set text here..."
caret_blink = true

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 212.0
margin_right = 244.0
margin_bottom = 35.0
rect_min_size = Vector2( 32, 32 )

[node name="DeleteChoiceButton" type="TextureButton" parent="HBoxContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="button_down" from="HBoxContainer/Control/DeleteChoiceButton" to="." method="_on_DeleteChoiceButton_button_down"]
